include/Urban.h

// Opaque handle type (pointer to private struct)
typedef struct _p_UrbanType *UrbanType;
// Error codes for API calls
typedef enum {
  URBAN_SUCCESS = 0,
  URBAN_ERR_INVALID_ARGUMENT = 1,
  URBAN_ERR_NOT_INITIALIZED = 2,
  URBAN_ERR_INTERNAL = 3,
  URBAN_ERR_SIZE_MISMATCH = 4
} UrbanErrorCode;
// Shortwave radiation getter functions - Absorbed
URBAN_EXTERN void UrbanGetAbsorbedShortwaveRoof(UrbanType urban, double *values,
                                                const int size[3],
                                                UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetAbsorbedShortwaveImperviousRoad(
    UrbanType urban, double *values, const int size[3], UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetAbsorbedShortwavePerviousRoad(UrbanType urban,
                                                        double *values,
                                                        const int size[3],
                                                        UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetAbsorbedShortwaveSunlitWall(UrbanType urban,
                                                      double *values,
                                                      const int size[3],
                                                      UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetAbsorbedShortwaveShadedWall(UrbanType urban,
                                                      double *values,
                                                      const int size[3],
                                                      UrbanErrorCode *status);
// Shortwave radiation getter functions - Reflected
URBAN_EXTERN void UrbanGetReflectedShortwaveRoof(UrbanType urban,
                                                 double *values,
                                                 const int size[3],
                                                 UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetReflectedShortwaveImperviousRoad(
    UrbanType urban, double *values, const int size[3], UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetReflectedShortwavePerviousRoad(
    UrbanType urban, double *values, const int size[3], UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetReflectedShortwaveSunlitWall(UrbanType urban,
                                                       double *values,
                                                       const int size[3],
                                                       UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetReflectedShortwaveShadedWall(UrbanType urban,
                                                       double *values,
                                                       const int size[3],
                                                       UrbanErrorCode *status);
// Longwave radiation getter functions - Net
URBAN_EXTERN void UrbanGetNetLongwaveRoof(UrbanType urban, double *values,
                                          int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetNetLongwaveImperviousRoad(UrbanType urban,
                                                    double *values, int length,
                                                    UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetNetLongwavePerviousRoad(UrbanType urban,
                                                  double *values, int length,
                                                  UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetNetLongwaveSunlitWall(UrbanType urban, double *values,
                                                int length,
                                                UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetNetLongwaveShadedWall(UrbanType urban, double *values,
                                                int length,
                                                UrbanErrorCode *status);
// Longwave radiation getter functions - Upward
URBAN_EXTERN void UrbanGetUpwardLongwaveRoof(UrbanType urban, double *values,
                                             int length,
                                             UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetUpwardLongwaveImperviousRoad(UrbanType urban,
                                                       double *values,
                                                       int length,
                                                       UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetUpwardLongwavePerviousRoad(UrbanType urban,
                                                     double *values, int length,
                                                     UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetUpwardLongwaveSunlitWall(UrbanType urban,
                                                   double *values, int length,
                                                   UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetUpwardLongwaveShadedWall(UrbanType urban,
                                                   double *values, int length,
                                                   UrbanErrorCode *status);
// Urban canyon air properties getter functions
URBAN_EXTERN void UrbanGetCanyonAirTemperature(UrbanType urban, double *values,
                                               int length,
                                               UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetCanyonAirHumidity(UrbanType urban, double *values,
                                            int length, UrbanErrorCode *status);
// Net shortwave radiation getter functions
URBAN_EXTERN void UrbanGetNetShortwaveRoof(UrbanType urban, double *values,
                                           int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetNetShortwaveImperviousRoad(UrbanType urban,
                                                     double *values, int length,
                                                     UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetNetShortwavePerviousRoad(UrbanType urban,
                                                   double *values, int length,
                                                   UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetNetShortwaveSunlitWall(UrbanType urban,
                                                 double *values, int length,
                                                 UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetNetShortwaveShadedWall(UrbanType urban,
                                                 double *values, int length,
                                                 UrbanErrorCode *status);
// Sensible heat flux getter functions
URBAN_EXTERN void UrbanGetSensibleHeatFluxRoof(UrbanType urban, double *values,
                                               int length,
                                               UrbanErrorCode *status);
URBAN_EXTERN void
UrbanGetSensibleHeatFluxImperviousRoad(UrbanType urban, double *values,
                                       int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetSensibleHeatFluxPerviousRoad(UrbanType urban,
                                                       double *values,
                                                       int length,
                                                       UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetSensibleHeatFluxSunlitWall(UrbanType urban,
                                                     double *values, int length,
                                                     UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetSensibleHeatFluxShadedWall(UrbanType urban,
                                                     double *values, int length,
                                                     UrbanErrorCode *status);