include/urban_mod.F90


    ! Shortwave radiation getter functions - Absorbed
    subroutine UrbanGetAbsorbedShortwaveRoof_C(urban, values, size, status) bind(C, name="UrbanGetAbsorbedShortwaveRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(3) :: size
      integer(c_int) :: status
    end subroutine UrbanGetAbsorbedShortwaveRoof_C

    subroutine UrbanGetAbsorbedShortwaveImperviousRoad_C(urban, values, size, status) &
      bind(C, name="UrbanGetAbsorbedShortwaveImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(3) :: size
      integer(c_int) :: status
    end subroutine UrbanGetAbsorbedShortwaveImperviousRoad_C

    subroutine UrbanGetAbsorbedShortwavePerviousRoad_C(urban, values, size, status) &
      bind(C, name="UrbanGetAbsorbedShortwavePerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(3) :: size
      integer(c_int) :: status
    end subroutine UrbanGetAbsorbedShortwavePerviousRoad_C

    subroutine UrbanGetAbsorbedShortwaveSunlitWall_C(urban, values, size, status) &
      bind(C, name="UrbanGetAbsorbedShortwaveSunlitWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(3) :: size
      integer(c_int) :: status
    end subroutine UrbanGetAbsorbedShortwaveSunlitWall_C

    subroutine UrbanGetAbsorbedShortwaveShadedWall_C(urban, values, size, status) &
      bind(C, name="UrbanGetAbsorbedShortwaveShadedWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(3) :: size
      integer(c_int) :: status
    end subroutine UrbanGetAbsorbedShortwaveShadedWall_C

    ! Shortwave radiation getter functions - Reflected
    subroutine UrbanGetReflectedShortwaveRoof_C(urban, values, size, status) &
      bind(C, name="UrbanGetReflectedShortwaveRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(3) :: size
      integer(c_int) :: status
    end subroutine UrbanGetReflectedShortwaveRoof_C

    subroutine UrbanGetReflectedShortwaveImperviousRoad_C(urban, values, size, status) &
      bind(C, name="UrbanGetReflectedShortwaveImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(3) :: size
      integer(c_int) :: status
    end subroutine UrbanGetReflectedShortwaveImperviousRoad_C

    subroutine UrbanGetReflectedShortwavePerviousRoad_C(urban, values, size, status) &
      bind(C, name="UrbanGetReflectedShortwavePerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(3) :: size
      integer(c_int) :: status
    end subroutine UrbanGetReflectedShortwavePerviousRoad_C

    subroutine UrbanGetReflectedShortwaveSunlitWall_C(urban, values, size, status) &
      bind(C, name="UrbanGetReflectedShortwaveSunlitWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(3) :: size
      integer(c_int) :: status
    end subroutine UrbanGetReflectedShortwaveSunlitWall_C

    subroutine UrbanGetReflectedShortwaveShadedWall_C(urban, values, size, status) &
      bind(C, name="UrbanGetReflectedShortwaveShadedWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(3) :: size
      integer(c_int) :: status
    end subroutine UrbanGetReflectedShortwaveShadedWall_C

    ! Net longwave radiation getter functions
    subroutine UrbanGetNetLongwaveRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetNetLongwaveRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetNetLongwaveRoof_C

    subroutine UrbanGetNetLongwaveImperviousRoad_C(urban, values, length, &
      status) bind(C, name="UrbanGetNetLongwaveImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetNetLongwaveImperviousRoad_C

    subroutine UrbanGetNetLongwavePerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetNetLongwavePerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetNetLongwavePerviousRoad_C

    subroutine UrbanGetNetLongwaveSunlitWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetNetLongwaveSunlitWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetNetLongwaveSunlitWall_C

    subroutine UrbanGetNetLongwaveShadedWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetNetLongwaveShadedWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetNetLongwaveShadedWall_C

    ! Upward longwave radiation getter functions
    subroutine UrbanGetUpwardLongwaveRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetUpwardLongwaveRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetUpwardLongwaveRoof_C

    subroutine UrbanGetUpwardLongwaveImperviousRoad_C(urban, values, length, &
      status) bind(C, name="UrbanGetUpwardLongwaveImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetUpwardLongwaveImperviousRoad_C

    subroutine UrbanGetUpwardLongwavePerviousRoad_C(urban, values, length, &
      status) bind(C, name="UrbanGetUpwardLongwavePerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetUpwardLongwavePerviousRoad_C

    subroutine UrbanGetUpwardLongwaveSunlitWall_C(urban, values, length, &
      status) bind(C, name="UrbanGetUpwardLongwaveSunlitWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetUpwardLongwaveSunlitWall_C

    subroutine UrbanGetUpwardLongwaveShadedWall_C(urban, values, length, &
      status) bind(C, name="UrbanGetUpwardLongwaveShadedWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetUpwardLongwaveShadedWall_C

    ! Urban canyon air properties getter functions
    subroutine UrbanGetCanyonAirTemperature_C(urban, values, length, status) &
      bind(C, name="UrbanGetCanyonAirTemperature")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetCanyonAirTemperature_C

    subroutine UrbanGetCanyonAirHumidity_C(urban, values, length, status) &
      bind(C, name="UrbanGetCanyonAirHumidity")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetCanyonAirHumidity_C

    ! Net shortwave radiation getter functions
    subroutine UrbanGetNetShortwaveRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetNetShortwaveRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetNetShortwaveRoof_C

    subroutine UrbanGetNetShortwaveImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetNetShortwaveImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetNetShortwaveImperviousRoad_C

    subroutine UrbanGetNetShortwavePerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetNetShortwavePerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetNetShortwavePerviousRoad_C

    subroutine UrbanGetNetShortwaveSunlitWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetNetShortwaveSunlitWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetNetShortwaveSunlitWall_C

    subroutine UrbanGetNetShortwaveShadedWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetNetShortwaveShadedWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetNetShortwaveShadedWall_C

    ! Sensible heat flux getter functions
    subroutine UrbanGetSensibleHeatFluxRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetSensibleHeatFluxRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetSensibleHeatFluxRoof_C

    subroutine UrbanGetSensibleHeatFluxImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetSensibleHeatFluxImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetSensibleHeatFluxImperviousRoad_C

    subroutine UrbanGetSensibleHeatFluxPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetSensibleHeatFluxPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetSensibleHeatFluxPerviousRoad_C

    subroutine UrbanGetSensibleHeatFluxSunlitWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetSensibleHeatFluxSunlitWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetSensibleHeatFluxSunlitWall_C

    subroutine UrbanGetSensibleHeatFluxShadedWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetSensibleHeatFluxShadedWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetSensibleHeatFluxShadedWall_C
